# emnapi-playground

./: .gitignore  CMakeLists.txt  binding.gyp  emscripten.js  fsworker.js  index.html  native.js  package.json  wasi.js  wasi.wasm  worker.js
lib/: buffer.js  fsa-to-node.js  ieee754.js
src/: lib.c
wasi-threads/: index.js  lib.wasm  main.wasm  wasi-threads.cjs.js  worker.js
